update -event update, create

--- a/demo-page/index.html
+++ b/demo-page/index.html
@@ -131,13 +131,13 @@
                   <div id="ibzq3">
                     <div id="i8yg5">
                       <div id="ipcma">
-                        <div class="view-field-container" data-type="view-field" >
+                        <div class="view-field-container" >
                           <label class="view-field-label-container">
-                            <span data-key="view-field-label" class="field-label">Customer</span>
+                            <span  class="field-label">Customer</span>
                           </label>
                           <div class="editable isViewing">
                           <div class="view" id="iwehh">
-                            <p id="i6z5y" data-type="common" data-key="view-field-value">Jenny Willson Acme co.</p>
+                            <p id="i6z5y" data-type="common" data-key="customer">Jenny Willson Acme co.</p>
                           </div>
                           <div>
                         <form class="edit">
@@ -156,7 +156,7 @@
                         <hr id="i2shi" />
                         <div class="view-field-container">
                           <label class="view-field-label-container">
-                            <span data-key="languageKey" class="field-label">Ticket ID</span>
+                            <span class="field-label">Ticket ID</span>
                           </label>
                           <div id="i6pj5">
                             <p data-type="common" data-key="code" id="ik5sx">Desk Email</p>
