update html data type

--- a/demo-page/index.html
+++ b/demo-page/index.html
@@ -73,23 +73,23 @@
           <div class="grid">
             <div class="grid-title">
               <div class="grid-title-text">
-                <a data-key="subject" class="title-text">Amet minim mollit non deserunt ullamco est si venimollit est</a>
+                <a data-key="subject-list" class="title-text">Amet minim mollit non deserunt ullamco est si venimollit est</a>
               </div>
             </div>
             <div class="grid-info-container">
               <div class="grid-info">
-                <p class="typography" data-key="code">TIC-000001</p>
+                <p class="typography" data-key="code-list">TIC-000001</p>
                 <div class="priority-chip">
-                  <div class="chip-title" data-key="priority">Medium</div>
+                  <div class="chip-title" data-key="priority-list">Medium</div>
                 </div>
               </div>
             </div>
             <div class="grid-info-container">
               <div class="grid-info">
                 <div class="priority-chip">
-                  <span class="chip-title" data-key="priority">Medium</span>
+                  <span class="chip-title" data-key="priority-list">Medium</span>
                 </div>
-                <p class="typography" data-key="assignedUser">Jenny Willson </p>
+                <p class="typography" data-key="assignedUser-list">Jenny Willson </p>
               </div>
             </div>
           </div>
