#Ticket -Add toolbar -Update Write form

--- a/demo-page/write-page/index.html
+++ b/demo-page/write-page/index.html
@@ -37,15 +37,21 @@
         </div>
       </div>
     </div>
-    <div data-mytext="MyText" id="inojh">Classification
-    </div>
+
     <input hidden type="value" name="classifications" data-key="classifications-write" />
     <div class="form-row" id="iwfe7">
       <div class="form-cell" id="ibmij">
         <div class="form-field" id="ihp1a">
           <label data-mytext="MyText" id="iipvl">Classification</label>
-          <select data-key="classification"  id="izosb"><option value="language">Language</option>&lt;</select>
-          <select type="text" id="i2u2m" data-key="classification-value"><option value="opt1">Option 1</option><option value="opt2">Option 2</option></select>
+          <div class="classification-container">
+            <select class="classification-item" data-key="classification"  id="izosb"><option value="language">Language</option>&lt;</select>
+            <select class="classification-item" type="text" id="i2u2m" data-key="classification-value"><option value="opt1">Option 1</option><option value="opt2">Option 2</option></select>
+          </div>
+          <div class="classification-container">
+            <select class="classification-item" data-key="classification"  id="izosb"><option value="language">Language</option>&lt;</select>
+            <select class="classification-item" type="text" id="i2u2m" data-key="classification-value"><option value="opt1">Option 1</option><option value="opt2">Option 2</option></select>
+          </div>
+          
         </div>
       </div>
    
