--- a/demo-page/list-page/index.html
+++ b/demo-page/list-page/index.html
@@ -77,6 +77,7 @@
 </div>
 </div>
 <table id="list-table">
+  <!-- <th><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"></th> -->
     <th>Subject</th>
     <th>Category</th>
     <th>Stage</th>
@@ -84,16 +85,16 @@
     <th>Assigned Rep</th>
     <th>Resolved Date</th>
 
-  <tr>
+  <tr data-type="list-common">
     <td><a data-key="subject-list" class="title-text">Amet minim mollit non deserunt ullamco est si venimollit est</a></td>
-    <td>Error/Product A</td>
+    <td><div data-key="category-list">Error/Product A</div></td>
     <td><div class="priority-chip">
-      <div class="chip-title" data-key="priority-list">Medium</div>
+      <div class="chip-title" data-key="stage-list">Open</div>
     </div></td>
     <td><div class="priority-chip">
-      <div class="chip-title" data-key="priority-list">Medium</div>
+      <div class="chip-title" data-key="status-list">Waiting</div>
     </div></td>
-    <td>Robert Fox</td>
+    <td><div data-key="assignedUser-list">Robert Fox</div></td>
     <td>2023-06-20</td>
 
   </tr>
