--- a/demo-page/write-page/index.html
+++ b/demo-page/write-page/index.html
@@ -8,31 +8,33 @@
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
 </head>
 <body>
-  <form class="form-container" id="ih8p">
+  <form class="form-container"  >
+    <div class="form-row">
     <div class="form-field" id="ith43">
-      <label data-mytext="MyText" class="field-title">Subject<span data-mytext="MyText" id="i0s88" draggable="true">*</span></label>
+      <label data-mytext="MyText" class="field-title">Subject<span data-mytext="MyText" class="required-field" draggable="true">*</span></label>
       <input placeholder="type your subject" type="text" name="subject" required id="igt4p"/>
     </div>
+  </div>
     <div class="form-row" >
       <div class="form-cell" id="iiwn">
         <div class="form-field" title="Customer" id="i1dmk">
           <label data-mytext="MyText" class="field-title">Customer</label>
-          <input type="value"  data-key="customer-write" name="customer" />
+          <input type="value"  data-key="customer-write" readonly name="customer" />
         </div>
       </div>
     </div>
     <div style="padding:8px;padding-bottom:0;"><label data-mytext="MyText" class="field-title">Category</label></div>
     
-    <div class="form-row" id="iqkyl">
+    <div class="form-row">
       <div class="form-cell" id="i7lh9">
-        <div class="form-field" id="ie098">
-          <label data-mytext="MyText" >Issue</label>
+        <div class="form-field" >
+          <label data-mytext="MyText" class="field-sub-title">Issue</label>
           <select type="text" id="iqw6l" data-key="category-write" name="category"><option value="opt1">Option 1</option><option value="opt2">Option 2</option></select>
         </div>
       </div>
       <div class="form-cell" id="if5jc">
         <div class="form-field" title="Assigned Rep" id="ibtig">
-          <label data-mytext="MyText" id="iu0zc">Product</label>
+          <label data-mytext="MyText" id="iu0zc" class="field-sub-title">Product</label>
           <select type="text" id="iah8l" name="product" data-key="product-write"><option value="opt1">User 1</option><option value="opt2">user 2</option></select>
         </div>
       </div>
@@ -48,7 +50,7 @@
               <label class="field-sub-title">Classification</label>
             </div>
             <div class="classification-item">
-              <label class="field-sub-title">value</label>
+              <label class="field-sub-title">Value</label>
             </div>
           </div>
           <input style="display:none" hidden type="value" name="classifications" data-key="classifications-write" />
@@ -77,7 +79,7 @@
   <script>
     const editor = new toastui.Editor({
         el: document.querySelector('#editor'),
-        height: '500px',
+        height: '400px',
         events: {
           blur: (value)=>{
             let contentWriteElement = document.querySelector('[data-key="content-write"]')
