--- a/demo-page/list-page/index.html
+++ b/demo-page/list-page/index.html
@@ -77,7 +77,7 @@
 </div>
 </div>
 <table id="list-table">
-  <!-- <th><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"></th> -->
+  <th><input type="checkbox" id="all-checkbox" name="all-select" value="all"></th>
     <th>Subject</th>
     <th>Category</th>
     <th>Stage</th>
@@ -86,6 +86,7 @@
     <th>Resolved Date</th>
 
   <tr data-type="list-common">
+    <td><input type="checkbox" data-key="select-list"></td>
     <td><a data-key="subject-list" class="title-text">Amet minim mollit non deserunt ullamco est si venimollit est</a></td>
     <td><div data-key="category-list">Error/Product A</div></td>
     <td><div class="priority-chip">
