#Ticket List - Update checkbox script

--- a/demo-page/list-page/index.html
+++ b/demo-page/list-page/index.html
@@ -77,6 +77,7 @@
 </div>
 </div>
 <div  class="bottom-toolbar-container hidden" >
+    <input hidden value id="ticketIds" />
     <button class="bottom-toolbar-btn">
       Print
     </button>
@@ -86,28 +87,28 @@
 </div>
 <table id="list-table">
   <th><input type="checkbox" id="all-checkbox" name="all-select" value="all"></th>
-    <th data-type="column-list" data-key="subject">Subject</th>
-    <th data-type="column-list" data-key="category">Category</th>
-    <th data-type="column-list" data-key="stage">Stage</th>
-    <th data-type="column-list" data-key="status">Status</th>
-    <th data-type="column-list" data-key="assignedUser-list">Assigned Rep</th>
-    <th data-type="column-list" data-key="resolvedDate">Resolved Date</th>
-    <th data-type="column-list" data-key="closedAt">Close Date</th>
+    <th class="hidden"  data-type="column-list" data-key="subject">Subject</th>
+    <th class="hidden"  data-type="column-list" data-key="category">Category</th>
+    <th class="hidden"  data-type="column-list" data-key="stage">Stage</th>
+    <th class="hidden"  data-type="column-list" data-key="status">Status</th>
+    <th class="hidden"  data-type="column-list" data-key="assignedUser">Assigned Rep</th>
+    <th class="hidden"  data-type="column-list" data-key="resolvedDate">Resolved Date</th>
+    <th class="hidden"  data-type="column-list" data-key="closedAt">Close Date</th>
 
 
   <tr data-type="list-common">
-    <td><input type="checkbox" data-key="select-list"></td>
-    <td><a data-key="subject-list" class="title-text">Amet minim mollit non deserunt ullamco est si venimollit est</a></td>
-    <td><div data-key="category-list">Error/Product A</div></td>
-    <td><div class="priority-chip">
+    <td ><input type="checkbox" data-key="select-list" value="123"></td>
+    <td class="hidden"  data-type="column-list" data-key="subject"><a data-key="subject-list" class="title-text">Amet minim mollit non deserunt ullamco est si venimollit est</a></td>
+    <td class="hidden"  data-type="column-list" data-key="category"><div data-key="category-list">Error/Product A</div></td>
+    <td class="hidden"  data-type="column-list" data-key="stage"><div class="priority-chip">
       <div class="chip-title" data-key="stage-list">Open</div>
     </div></td>
-    <td><div class="priority-chip">
+    <td class="hidden"   data-type="column-list" data-key="status"><div class="priority-chip">
       <div class="chip-title" data-key="status-list">Waiting</div>
     </div></td>
-    <td><div data-key="assignedUser-list">Robert Fox</div></td>
-    <td data-key="resolvedDate-list">2023-06-20</td>
-    <td data-key="closedAt-list">2023-06-20</td>
+    <td class="hidden"  data-type="column-list" data-key="assignedUser"><div data-key="assignedUser-list">Robert Fox</div></td>
+    <td class="hidden"  data-type="column-list" data-key="resolvedDate"><span data-key="resolvedDate-list">2023-06-20</span> </td>
+    <td class="hidden"  data-type="column-list" data-key="closedAt"><span data-key="closedAt-list">2023-06-20</span></td>
 
   </tr>
   
