--- a/demo-page/view-page/index.html
+++ b/demo-page/view-page/index.html
@@ -10,9 +10,9 @@
     <div id="isbj">
       <div id="ivij">
         <div id="iwar">
-          <button type="button" id="i609">
-            <img src="svg/back-arrow.svg" class="back-arrow" />
-          </button>
+          <a id="i609" href="/ticket">
+            <svg class="back-arrow" fill="#1890ff" viewBox="0 0 52 52" data-name="Layer 1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M50,24H6.83L27.41,3.41a2,2,0,0,0,0-2.82,2,2,0,0,0-2.82,0l-24,24a1.79,1.79,0,0,0-.25.31A1.19,1.19,0,0,0,.25,25c0,.07-.07.13-.1.2l-.06.2a.84.84,0,0,0,0,.17,2,2,0,0,0,0,.78.84.84,0,0,0,0,.17l.06.2c0,.07.07.13.1.2a1.19,1.19,0,0,0,.09.15,1.79,1.79,0,0,0,.25.31l24,24a2,2,0,1,0,2.82-2.82L6.83,28H50a2,2,0,0,0,0-4Z"></path></g></svg>          
+          </a>
           <button type="button" id="i5k8">
             <h5 id="ijwf">
               <span data-lang-id="ncrm_common_desk_sites">Desk Sites</span>
