--- a/demo-page/list-page/index.html
+++ b/demo-page/list-page/index.html
@@ -58,7 +58,9 @@
 
                     <details>
                       <summary>Priority</summary>
+                      <div class="autocomplete" style="width:300px;">
                       <input style="width: 100%;" name="priority" data-key="priority-write" />
+                      </div>
                     </details>
                   </li>
                   <li>
